tests/snapshots/snapshot_tests__array_two_counters_max_subtr.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_two_counters_max_subtr.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i (- (Read-Int-Int a i))) i) (- (Read-Int-Int a i)))",
        "(= (Read-Int-Int (Write-Int-Int a_next i (- (Read-Int-Int a_next i))) i) (- (Read-Int-Int a_next i)))",
        "(= (Read-Int-Int (Write-Int-Int a i (- (Read-Int-Int a i))) i) (Read-Int-Int a i))",
    ],
}
