tests/snapshots/snapshot_tests__array_two_counters_min_max.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_two_counters_min_max.vmt",
    status: Good,
    used_instantiations: [],
}
