tests/snapshots/snapshot_tests__array_two_counters_min_max_prog.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_two_counters_min_max_prog.vmt",
    status: Panic,
    used_instantiations: [],
}
