tests/snapshots/snapshot_tests__array_two_counters_replace.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_two_counters_replace.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i 5) i) 5)",
        "(= (Read-Int-Int (Write-Int-Int a i 3) i) 3)",
        "(= (Read-Int-Int (Write-Int-Int a1 i_next (Read-Int-Int Array-Int-Int!val!1 i)) i_next) (Read-Int-Int Array-Int-Int!val!1 i))",
        "(= (Read-Int-Int (Write-Int-Int a1 i_next (Read-Int-Int Array-Int-Int!val!1 i)) i_next) (Read-Int-Int a1 i_next))",
        "(= (Read-Int-Int (Write-Int-Int a i 3) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int a i 5) i) (Read-Int-Int a i))",
    ],
}
