tests/snapshots/snapshot_tests__array_two_counters_sum.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_two_counters_sum.vmt",
    status: Timeout,
    used_instantiations: [],
}
